libraries/ckit/regression/invalid-programs/r45.c
int f(int (*)[]);

int f(int (*)[4]);

main () {
  int (*a)[5];
  f(a);
}
